setup completed for reading db configuration from Vault

--- a/order-service/src/main/resources/bootstrap.properties
+++ b/order-service/src/main/resources/bootstrap.properties
@@ -1,1 +1,14 @@
+spring.application.name=order-service
+server.port=0
+
 spring.cloud.config.uri=http://localhost:8888
+
+eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+
+spring.cloud.vault.uri=http://localhost:8200
+
+spring.cloud.vault.token=hvs.SeZXvNsqdIFFdNXjjcOvRyZc
+
+spring.cloud.vault.generic.backend=secret
+
+spring.cloud.vault.generic.default-context=order-service
