--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -45,6 +45,12 @@
 			<artifactId>spring-cloud-starter-bootstrap</artifactId>
 			<version>3.1.3</version>
 		</dependency>
+		<!--VAULT DEPENDENCY-->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-vault-config</artifactId>
+			<version>3.1.1</version>
+		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
