added rabbitmq configuration for spring cloud bus

--- a/order-service/src/main/resources/bootstrap.properties
+++ b/order-service/src/main/resources/bootstrap.properties
@@ -1,14 +1,22 @@
 spring.application.name=order-service
 server.port=0
-
-spring.cloud.config.uri=http://localhost:8888
-
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+spring.config.import=optional:configserver:http://localhost:8888?fail-fast=true&max-attempts=10&max-interval=1500
 
-spring.cloud.vault.uri=http://localhost:8200
+management.endpoints.web.exposure.include=*
 
-spring.cloud.vault.token=hvs.SeZXvNsqdIFFdNXjjcOvRyZc
+# Vault
+spring.cloud.vault.enabled=true
+spring.cloud.vault.host=127.0.0.1
+spring.cloud.vault.port=8200
+spring.cloud.vault.scheme=http
+spring.cloud.vault.authentication=TOKEN
+# Below value will keep changing on vault start ups
+spring.cloud.vault.token=hvs.EIanK5T7y3hpm47w5kYKElfC
+spring.cloud.vault.application-name=order-service
 
-spring.cloud.vault.generic.backend=secret
-
-spring.cloud.vault.generic.default-context=order-service
+# RabbitMQ config
+spring.rabbitmq.host = 127.0.0.1
+spring.rabbitmq.port = 5672
+spring.rabbitmq.username = guest
+spring.rabbitmq.password = guest
