--- a/product-service/src/main/resources/bootstrap.properties
+++ b/product-service/src/main/resources/bootstrap.properties
@@ -6,3 +6,19 @@ spring.cloud.config.uri=http://localhost:8888
 management.endpoints.web.exposure.include=*
 
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+
+# Vault
+spring.cloud.vault.enabled=true
+spring.cloud.vault.host=127.0.0.1
+spring.cloud.vault.port=8200
+spring.cloud.vault.scheme=http
+spring.cloud.vault.authentication=TOKEN
+# Below value will keep changing on vault start ups
+spring.cloud.vault.token=hvs.EIanK5T7y3hpm47w5kYKElfC
+spring.cloud.vault.application-name=product-service
+
+# RabbitMQ config
+spring.rabbitmq.host = 127.0.0.1
+spring.rabbitmq.port = 5672
+spring.rabbitmq.username = guest
+spring.rabbitmq.password = guest
