--- a/product-service/src/main/resources/bootstrap.properties
+++ b/product-service/src/main/resources/bootstrap.properties
@@ -6,6 +6,7 @@ spring.cloud.config.uri=http://localhost:8888
 management.endpoints.web.exposure.include=*
 
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+eureka.instance.hostname=localhost
 
 # Vault
 spring.cloud.vault.enabled=true
@@ -14,7 +15,7 @@ spring.cloud.vault.port=8200
 spring.cloud.vault.scheme=http
 spring.cloud.vault.authentication=TOKEN
 # Below value will keep changing on vault start ups
-spring.cloud.vault.token=hvs.EIanK5T7y3hpm47w5kYKElfC
+spring.cloud.vault.token=hvs.slaOgFOTO1nNQMNymdJpXBcz
 spring.cloud.vault.application-name=product-service
 
 # RabbitMQ config
