added integration for api gateway with authorization server - Keycloak

--- a/api-gateway-service/src/main/resources/application.properties
+++ b/api-gateway-service/src/main/resources/application.properties
@@ -7,4 +7,15 @@ spring.cloud.gateway.routes[0].id=product-service
 spring.cloud.gateway.routes[0].uri=lb://product-service
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/product
 
+# TOKEN RELAY - send token to downstream microservices
+spring.cloud.gateway.default-filters=TokenRelay
+
 eureka.instance.instance-id=${spring.application.name}-${random.uuid}
+
+# SECURITY
+spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:8180/auth/realms/microservices-project-realm
+spring.security.oauth2.client.registration.spring-cloud-gateway-client.client-id=spring-cloud-gateway-client
+spring.security.oauth2.client.registration.spring-cloud-gateway-client.client-secret=00eb8813-607f-4cb3-8f60-dcc5d241a87b
+spring.security.oauth2.client.registration.spring-cloud-gateway-client.provider=keycloak
+spring.security.oauth2.client.registration.spring-cloud-gateway-client.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.spring-cloud-gateway-client.redirect-uri=http://localhost:8080/login/oauth2/code/spring-cloud-gateway-client
