--- a/product-service/src/main/resources/bootstrap.properties
+++ b/product-service/src/main/resources/bootstrap.properties
@@ -23,3 +23,6 @@ spring.rabbitmq.host = 127.0.0.1
 spring.rabbitmq.port = 5672
 spring.rabbitmq.username = guest
 spring.rabbitmq.password = guest
+
+# oauth2 conf
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8180/auth/realms/microservices-project-realm
